# moltcat

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  README_CN.md  vcpkg.json
cmake/: moltcat-config.cmake.in
docs/: ARCHITECTURE.md  ARCHITECTURE_CN.md  THREADING_MODEL.md  THREAD_POOL_ANALYSIS.md  UNIFIED_EXECUTOR_INTERFACE.md  UNIFIED_SCHEDULER_INTERFACE.md
examples/: CMakeLists.txt  example_skill.cpp  hybrid_executor_example.cpp  scheduler_example.cpp  simple_agent.cpp  threading_example.cpp  unified_executor_example.cpp
examples/calculator_skill/: CMakeLists.txt  README.md  calculator_skill.cpp
include/moltcat/: molt_export.hpp  molt_model.hpp  molt_plugin.hpp  molt_skill.hpp
source/: main.cpp
source/agent/: CMakeLists.txt  agent.cpp  agent.hpp  agent_discovery_service.cpp  agent_discovery_service.hpp  agent_pool.cpp  agent_pool.hpp  agent_runtime_state.hpp  agent_team.cpp  agent_team.hpp  agent_template.cpp  agent_template.hpp  agent_template_builder.cpp  agent_template_builder.hpp  agent_template_registry.cpp  agent_template_registry.hpp  smart_agent_router.cpp  smart_agent_router.hpp  task_classifier.cpp  task_classifier.hpp  task_router.cpp  task_router.hpp  task_types.hpp  team_registry.cpp  team_registry.hpp
source/core/: CMakeLists.txt  event_loop.hpp  executor.cpp  executor.hpp  hybrid_executor.hpp  scheduler.hpp  task.hpp
source/gateway/: CMakeLists.txt  connection_info.hpp  http_gateway.cpp  http_gateway.hpp  task_manager.cpp  task_manager.hpp  ws_gateway.cpp  ws_gateway.hpp
source/gateway/auth/: auth_manager.cpp  auth_manager.hpp  permission_checker.cpp  permission_checker.hpp  signature_verifier.cpp  signature_verifier.hpp  token_manager.cpp  token_manager.hpp
source/memory/: CMakeLists.txt  agent_memory_view.cpp  agent_memory_view.hpp  memory_entry.hpp  memory_manager.cpp  memory_manager.hpp
source/messaging/: CMakeLists.txt  context.hpp  load_balancer.cpp  load_balancer.hpp  memory_messages.hpp  message.hpp  message_bus.hpp  message_bus_client.cpp  message_bus_client.hpp  message_bus_server.cpp  message_bus_server.hpp  message_handler.hpp  message_queue.hpp  message_router.cpp  message_router.hpp  service_registry.cpp  service_registry.hpp  zeromq_queue.hpp
source/model/: CMakeLists.txt  agent_config.hpp  context.hpp  model.hpp  provider_config.hpp  result.hpp  state.cpp  state.hpp  task.hpp  task_state_machine.cpp  task_state_machine.hpp  types.hpp
source/monitoring/: CMakeLists.txt  agent_health_monitor.cpp  agent_health_monitor.hpp  unified_monitor.cpp  unified_monitor.hpp
source/network/: CMakeLists.txt  llm_client.hpp  llm_client_factory.cpp  llm_client_factory.hpp  llm_request.cpp  llm_request.hpp  llm_response.cpp  llm_response.hpp  mock_llm_client.cpp  mock_llm_client.hpp
source/protocol/: CMakeLists.txt  a2a_adapter.hpp  a2a_http_gateway.hpp  a2a_jsonrpc.hpp  a2a_memory_extensions.hpp  a2a_types.hpp  ws_frames.hpp  ws_methods.hpp  ws_schema.hpp
source/provider/: CMakeLists.txt  provider.cpp  provider.hpp  provider_manager.cpp  provider_manager.hpp
source/utils/: CMakeLists.txt  ed25519.cpp  ed25519.hpp  error.hpp  file_utils.hpp  json_utils.cpp  json_utils.hpp  logger.hpp  math_utils.hpp  rate_limiter.cpp  rate_limiter.hpp  string_utils.cpp  string_utils.hpp  timer.hpp  utils.hpp  uuid.hpp
tests/: CMakeLists.txt  main.cpp
